--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -8,7 +8,7 @@
 			font-family: courier new;
 		}
 
-		#ac-head label {
+		label[for="ac-head"] {
 			font-size: 2em;
 			margin: 0;
 		}
@@ -95,7 +95,7 @@
 	<div id="mainPopup">
 		<section class="ac-container">
 			<div>
-				<input checked="checked" id="ac-head" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-head" name="accordion-1" type="radio">
 				<label for="ac-head">Git Cheat Sheet</label>
 				<article class="ac-large">
 					<p>Creator: <a target="_blank" href="http://themergency.com/git-cheat-sheet-chrome-extension">Brad Vincent</a> |
@@ -104,7 +104,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-0" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-0" name="accordion-1" type="radio">
 				<label for="ac-0">Terminology<a href="http://stackoverflow.com/questions/7076164/terminology-used-by-git">more
 					terminology</a></label>
 				<article class="ac-large">
@@ -151,7 +151,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-1" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-1" name="accordion-1" type="radio">
 				<label for="ac-1">Starting a Repo<span>init/clone/remote</span></label>
 				<article>
 					<table class="table table-responsive table-hover">
@@ -202,7 +202,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-2" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-2" name="accordion-1" type="radio">
 				<label for="ac-2">Showing/Undoing Changes<span>status/diff/log/blame/reset/revert</span></label>
 				<article class="ac-medium">
 					<table class="table table-responsive table-hover">
@@ -248,7 +248,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-3" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-3" name="accordion-1" type="radio">
 				<label for="ac-3">Staging<span>add/rm</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
@@ -278,7 +278,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-4" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-4" name="accordion-1" type="radio">
 				<label for="ac-4">Publishing<span>commit/stash/push</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
@@ -328,7 +328,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-5" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-5" name="accordion-1" type="radio">
 				<label for="ac-5">Updating and Getting Code<span>fetch/pull</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
@@ -350,7 +350,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-6" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-6" name="accordion-1" type="radio">
 				<label for="ac-6">Branching<span>branch/checkout</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
@@ -392,7 +392,7 @@
 				</article>
 			</div>
 			<div>
-				<input id="ac-7" name="accordion-1" type="radio">
+				<input class="rad_section" id="ac-7" name="accordion-1" type="radio">
 				<label for="ac-7">Branching (Advanced)<span>merge/rebase</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
@@ -421,5 +421,6 @@
 			</div>
 		</section>
 	</div>
+	<script src="functions.js" type="text/javascript"></script>
 </body>
 </html>
