--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -100,12 +100,13 @@
 				<article class="ac-large">
 					<p>Creator: <a target="_blank" href="http://themergency.com/git-cheat-sheet-chrome-extension">Brad Vincent</a> |
 						Original: <a target="_blank" href="http://scotch.io/bar-talk/git-cheat-sheet">Git Cheat Sheet</a> via <a target="_blank" href="http://scotch.io">scotch.io</a></p>
-					<p>Learn Git: <a target="_blank" href="http://try.github.io/">try.github.io</a> | Git book : <a href="http://git-scm.com/book">Pro Git</a></p>
+					<p>Contribute: <a target="_blank" href="https://github.com/bradvin/Git-Cheat-Sheet-Chrome-Extension">GitHub Repo</a> |
+						Learn: <a target="_blank" href="http://try.github.io/">try.github.io</a> | Read : <a href="http://git-scm.com/book">Pro Git</a></p>
 				</article>
 			</div>
 			<div>
 				<input class="rad_section" id="ac-0" name="accordion-1" type="radio">
-				<label for="ac-0">Terminology<a href="http://stackoverflow.com/questions/7076164/terminology-used-by-git">more
+				<label for="ac-0">Terminology<a target="_blank" href="http://stackoverflow.com/questions/7076164/terminology-used-by-git">more
 					terminology</a></label>
 				<article class="ac-large">
 					<table class="table table-responsive">
