--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -198,6 +198,10 @@
 							<td>git remote rm <span>&lt;remote name&gt;</span></td>
 							<td>Remove a remote repository</td>
 						</tr>
+						<tr>
+							<td>git remote prune <span>origin</span></td>
+							<td>Removes all remote branches from your local clone that have already been deleted from the source</td>
+						</tr>
 						</tbody>
 					</table>
 				</article>
