Adding the missing dash on the RESET modifier.

--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -233,7 +233,7 @@
 							<td>Show who changed each line of a file and when</td>
 						</tr>
 						<tr>
-							<td>git reset <span>-hard</span></td>
+							<td>git reset <span>--hard</span></td>
 							<td>Go back to the last commit (will not delete new unstaged files)</td>
 						</tr>
 						<tr>
