Added command to get the latest changes from all subrepositories

--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -347,6 +347,10 @@
 							<td>Get the latest changes from origin AND merge</td>
 						</tr>
 						<tr>
+							<td>git submodule forearch git pull</td>
+							<td>In all submodules (subrepositories), get the latest changes from origin AND merge</td>
+						</tr>
+						<tr>
 							<td>git checkout <span>-b</span> <span>&lt;new branch name&gt;</span> <span>origin/&lt;branch name&gt;</span></td>
 							<td>Get a remote branch from origin into a local branch (naming the branch and switching to it)</td>
 						</tr>
