adding delete branch only locally

--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -393,6 +393,10 @@
 							<td>Get a remote branch from origin into a local branch (naming the branch and switching to it)</td>
 						</tr>
 						<tr>
+							<td>git branch <span>-d</span> <span>&lt;branch name&gt;</span></td>
+							<td>Delete a branch only locally</td>
+						</tr>
+						<tr>
 							<td>git push origin <span>-delete</span> <span>&lt;branch name&gt;</span></td>
 							<td>Delete a branch locally and remotely</td>
 						</tr>
