adding git config

--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -208,7 +208,41 @@
 			</div>
 			<div>
 				<input class="rad_section" id="ac-2" name="accordion-1" type="radio">
-				<label for="ac-2">Showing/Undoing Changes<span>status/diff/log/blame/reset/revert</span></label>
+				<label for="ac-2">Git Setup<span>config</span></label>
+				<article class="ac-medium">
+					<table class="table table-responsive table-hover">
+						<tbody>
+						<tr>
+							<td>git config user.name <span>&lt;username&gt;</span></td>
+							<td>Setup user name locally</td>
+						</tr>
+						<tr>
+							<td>git config --global user.name <span>&lt;username&gt;</span></td>
+							<td>Setup user name globally</td>
+						</tr>
+						<tr>
+							<td>git config user.email <span>&lt;username&gt;</span></td>
+							<td>Setup user email locally</td>
+						</tr>
+						<tr>
+							<td>git config --global user.email <span>&lt;username&gt;</span></td>
+							<td>Setup user email globally</td>
+						</tr>
+						<tr>
+							<td>git config --global core.editor vim <span>&lt;username&gt;</span></td>
+							<td>Setup your editor globally</td>
+						</tr>
+						<tr>
+							<td>git config --list</td>
+							<td>Checking your settings</td>
+						</tr>
+						</tbody>
+					</table>
+				</article>
+			</div>
+			<div>
+				<input class="rad_section" id="ac-3" name="accordion-1" type="radio">
+				<label for="ac-3">Showing/Undoing Changes<span>status/diff/log/blame/reset/revert</span></label>
 				<article class="ac-medium">
 					<table class="table table-responsive table-hover">
 						<tbody>
@@ -253,8 +287,8 @@
 				</article>
 			</div>
 			<div>
-				<input class="rad_section" id="ac-3" name="accordion-1" type="radio">
-				<label for="ac-3">Staging<span>add/rm</span></label>
+				<input class="rad_section" id="ac-4" name="accordion-1" type="radio">
+				<label for="ac-4">Staging<span>add/rm</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
 						<tbody>
@@ -283,8 +317,8 @@
 				</article>
 			</div>
 			<div>
-				<input class="rad_section" id="ac-4" name="accordion-1" type="radio">
-				<label for="ac-4">Publishing<span>commit/stash/push</span></label>
+				<input class="rad_section" id="ac-5" name="accordion-1" type="radio">
+				<label for="ac-5">Publishing<span>commit/stash/push</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
 						<tbody>
@@ -333,8 +367,8 @@
 				</article>
 			</div>
 			<div>
-				<input class="rad_section" id="ac-5" name="accordion-1" type="radio">
-				<label for="ac-5">Updating and Getting Code<span>fetch/pull</span></label>
+				<input class="rad_section" id="ac-6" name="accordion-1" type="radio">
+				<label for="ac-6">Updating and Getting Code<span>fetch/pull</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
 						<tbody>
@@ -359,8 +393,8 @@
 				</article>
 			</div>
 			<div>
-				<input class="rad_section" id="ac-6" name="accordion-1" type="radio">
-				<label for="ac-6">Branching<span>branch/checkout</span></label>
+				<input class="rad_section" id="ac-7" name="accordion-1" type="radio">
+				<label for="ac-7">Branching<span>branch/checkout</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
 						<tbody>
@@ -405,8 +439,8 @@
 				</article>
 			</div>
 			<div>
-				<input class="rad_section" id="ac-7" name="accordion-1" type="radio">
-				<label for="ac-7">Branching (Advanced)<span>merge/rebase</span></label>
+				<input class="rad_section" id="ac-8" name="accordion-1" type="radio">
+				<label for="ac-8">Branching (Advanced)<span>merge/rebase</span></label>
 				<article class="ac-large">
 					<table class="table table-responsive table-hover">
 						<tbody>
