--- a/GitCheatSheet/src/browser_action/browser_action.html
+++ b/GitCheatSheet/src/browser_action/browser_action.html
@@ -63,30 +63,34 @@
 		}
 
 		.ac-container input:checked#ac-1 ~ article {
-			height: 471px;
+			height: 511px;
 		}
 
 		.ac-container input:checked#ac-2 ~ article {
-			height: 399px;
+			height: 279px;
 		}
 
 		.ac-container input:checked#ac-3 ~ article {
-			height: 238px;
+			height: 398px;
 		}
 
 		.ac-container input:checked#ac-4 ~ article {
-			height: 425px;
+			height: 225px;
 		}
 
 		.ac-container input:checked#ac-5 ~ article {
-			height: 156px;
+			height: 406px;
 		}
 
 		.ac-container input:checked#ac-6 ~ article {
-			height: 325px;
+			height: 225px;
 		}
 
 		.ac-container input:checked#ac-7 ~ article {
+			height: 367px;
+		}
+		
+		.ac-container input:checked#ac-8 ~ article {
 			height: 207px;
 		}
 	</style>
